# SolPVCVercel

./: .gitignore  .replit  .replit.checklist  .replitignore  ADD_TO_VERCEL.txt  AGENTS.md  AIPriceChart.md  AI_PREDICTION_LINE_COMPLETE.md  Anchor.toml  BackendUpdateGuide.md  CHECK_BUILD_ERROR.md  DEPLOYMENT_README.md  DEPLOY_INSTRUCTIONS.md  DiscordNotifPlan.md  IMPLEMENTATION_STATUS.md  LOVABLE_MIGRATION_GUIDE.md  LOVABLE_README.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  NEXT_STEPS.md  POOL_CONFIGURATION_FINAL.md  POOL_STATUS_FIX.md  PoolLogic.md  PortGuide.md  QUICK_START.md  README.md  REPLIT_SETUP.md  ROUTE_SEPARATION_COMPLETE.md  Reference.md  ReferenceAI.md  ReferenceLogic.md  SOLANA_INTEGRATION_SUMMARY.md  START_HERE.md  SUMMARY.md  SUPABASE_CONNECTION_FIX.md  SUPABASE_RENDER_ARCHITECTURE.md  UPDATE_DOT_ENV.md  VERCEL_DEPLOYMENT.md  VERCEL_ENV_SETUP.txt  WALLET_BALANCE_UPDATE.md  (+8 more)
app/: globals.css  layout.tsx  page.tsx
components/: MainContentSection.tsx  SideMenuSection.tsx  TopBarSection.tsx  ai-chip.tsx  claim-panel.tsx  entry-form.tsx  pool-bar.tsx  pool-card.tsx  price-chart.tsx  prize-pools.tsx  runner-card.tsx  side-selector.tsx  skeleton-card.tsx  timer.tsx  trust-chips.tsx  wallet-display.tsx
lib/: app-context.tsx  entry-service.ts  pool-service.ts  pool-utils.ts  supabase.ts
lib/idl/: solpve.ts
prisma/: dev.db  schema.prisma  seed.ts
programs/solpve/: Cargo.toml
programs/solpve/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/components/: MainContentSection.tsx  SideMenuSection.tsx  TopBarSection.tsx  (+12 more)
supabase/: config.toml
(+42 files in other folders)
